fancave/istio/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fancave-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fancave
spec:
  hosts:
  - "*"
  gateways:
  - fancave-gateway
  http:
  - match:
    - uri: 
        prefix: /api/team/ #exact | prefix | regex
    route:
    - destination:
        host: fancave-teams.default.svc.cluster.local
        port:
          number: 3080
  - match:
    - uri: 
        prefix: /api/news/
    route:
    - destination:
        host: fancave-news.default.svc.cluster.local
        port:
          number: 3080
  - match:
    - uri: 
        prefix: /api/player/
    route:
    - destination:
        host: fancave-players.default.svc.cluster.local
        port:
          number: 3080           
  - match:
    - uri: 
        prefix: /index.html
    route:
     - destination:
         host: fancave-client.default.svc.cluster.local
         port:
          number: 3080           
  - match:
    - uri: 
        prefix: /build/
    route:
     - destination:
        host: fancave-client.default.svc.cluster.local
        port:
          number: 3080            
  - match:
    - uri: 
        prefix: /assets/
    route:
     - destination:
        host: fancave-client.default.svc.cluster.local
        port:
          number: 3080
